# personal-glorng

./: .dockerignore  .editorconfig  .env.example  .env.production.example  .gitignore  .pre-commit-config.yaml  .rgignore  AGENTS.md  Dockerfile  Makefile  README.md  SECURITY.md  compose.debug.yaml  compose.yaml  docker-compose.cache.yml  docker-compose.ci.yml  docker-compose.cloud-vm.yml  docker-compose.cloudflare.yml  docker-compose.lite.yml  docker-compose.prod.yml  docker-compose.search.yml  docker-compose.ultra-lite.yml  docker-compose.yml  plan.md  requirements.txt
server/: .dockerignore  Dockerfile  alembic.ini  docker-entrypoint.sh  pyproject.toml  requirements.txt
server/alembic/: env.py
server/alembic/versions/: 6a8afe17ea7b_add_feedback_table.py  a03de92af0db_initial.py  a10996a0b1f2_add_shared_files.py  b7f3e1d20a4c_add_recipes_table.py  c4e8f2a91b3d_add_todobot_tables.py  d2f4a7c83e19_add_github_credentials.py  e8a1c4f92b0d_add_tool_expenses_table.py
server/app/: main.py  openapi.py  seed.py  seed_multicooker_recipes.py  settings.py
server/app/content/: resume_data.py
server/app/core/: app_log_persist.py  cache_json.py  catalogs.py  common_passwords.txt  csrf.py  database.py  date_ranges.py  deps.py  elasticsearch.py  email.py  exceptions.py  feature_flags.py  fernet_secrets.py  google_oauth_state.py  json_lists.py  logging.py  middleware.py  mongodb.py  pagination.py  password_policy.py  permissions.py  rate_limit.py  redis.py  redis_keys.py  request_context.py  security.py  telegram.py  text.py  uploads.py  url_safety.py  user_cache.py  utils.py  xml_security.py
server/app/db/: __init__.py  base.py  deps.py  dialect.py  init_service.py  recipe_search.py  registry.py  search_index.py  seed.py  seed_demo.py  seed_multicooker_recipes.py  session.py  types.py  worker_registry.py
server/app/models/: __init__.py  base.py  feedback.py  github_credential.py  google_auth.py  google_sync_queue.py  recipe.py  reminder.py  shared_file.py  task.py  task_status_history.py  tool_expense.py  url.py  user.py
server/app/platform/: __init__.py  registry.py
server/app/routers/: __init__.py  account.py  amp.py  auth.py  callbacks.py  donations.py  feedback.py  github.py  github_public.py  health.py  news.py  platform.py  resume.py  search.py  seo.py  spotify.py  sse.py  weather.py  webhooks.py
server/app/schemas/: admin_users.py  ai_chat.py  app_log.py  audit.py  auth.py  calculator.py  common.py  currency.py  data_extract.py  date_filters.py  donations.py  email.py  expense.py  expense_calculator.py  expense_category.py  feedback.py  fileshare.py  github.py  news.py  password_generator.py  platform.py  recipe.py  search.py  spotify.py  task.py  task_intake.py  tool_expense.py  tool_expense_category.py  url.py  validators.py  viddownload.py  weather.py  world_time.py
server/app/scripts/: __init__.py  notify_backup_result.py
server/app/services/: account.py  admin_users.py  ai_chat.py  ai_search.py  amp_page.py  app_log.py  audit.py  auth.py  base.py  calendar.py  currency.py  data_extract.py  data_import.py  elasticsearch_app_logs.py  elasticsearch_search.py  expense.py  expense_calculator.py  expense_category.py  feedback.py  fileshare.py  firebase_auth.py  github.py  github_credentials.py  github_portfolio.py  google_credentials.py  llm_json.py  news.py  news_ingest.py  news_telegram.py  password_generator.py  recipe.py  resume_pdf.py  search_bootstrap.py  search_index.py  search_source_types.py  search_types.py  spotify.py  stripe_donations.py  task.py  task_intake.py  (+9 more)
server/app/todobot/: main.py
server/app/workers/: __init__.py  async_runner.py  broker_health.py  celery_app.py  job_names.py  pool.py  queue.py  queues.py  run.py  scheduling.py  tasks.py
server/scripts/: db_init.sh  ensure_e2e_user.py  migrate_postgres_to_mongo.py  reindex_search.py
server/tests/: .env.postgres  .env.test  conftest.py  env_helpers.py  factories.py  test_account.py  test_admin_search_api.py  test_admin_users.py  test_ai_chat.py  test_amp.py  test_app_log_persist.py  test_app_logs_api.py  test_audit_extended.py  test_audit_helpers.py  test_audit_mutations.py  test_auth.py  test_broker_health.py  test_calculator.py  test_calendar.py  test_celery_conf.py  test_celery_schedule.py  test_client_ip.py  test_core_text.py  test_csrf.py  test_csrf_middleware.py  test_currency.py  test_currency_parity.py  test_data_extractor.py  test_date_filters.py  test_donations.py  test_elasticsearch_app_logs.py  test_elasticsearch_search.py  test_email.py  test_email_templates.py  test_expense_calculator_public.py  test_expense_categories.py  test_expense_nlp.py  test_expenses.py  test_fake_redis_ttl.py  test_feature_flags.py  (+55 more)
server/tests/env/: ai-chat.env  ai-search.env  ci-docker.env  fernet.env  github-public.env  production-csrf.env  production-telegram.env  production-weak-postgres.env  production-weak-redis.env  (+2 more)
(+607 files in other folders)
