[project]
name = "glorng-server"
version = "0.1.0"
requires-python = ">=3.12"

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = [
  "E", "F", "I", "N", "UP", "B", "SIM", "RUF",
  "ANN", "C4", "PT", "T20", "S", "ARG",
]
ignore = []

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["ANN201", "ANN401", "S101", "S105", "S107", "ARG001", "ARG002"]
"app/db/migrations/**/*.py" = ["E501", "ANN"]
"app/workers/**/*.py" = ["ARG001", "RUF012"]
"app/todobot/middlewares/**/*.py" = ["ANN401"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
