[project]
name = "glorng-server"
version = "0.1.0"
requires-python = ">=3.14,<3.15"
dependencies = [
    "fastapi[standard]==0.136.*",
    "uvicorn[standard]==0.49.*",
    "sqlalchemy[asyncio]==2.0.*",
    "asyncpg==0.31.*",
    "alembic==1.18.*",
    "pydantic-settings==2.14.*",
    "PyJWT[crypto]==2.13.*",
    "bcrypt==5.0.*",
    "redis[hiredis]==5.3.*",
    "arq==0.28.*",
    "sentry-sdk[fastapi]==2.61.*",
    "httpx==0.28.*",
    "openai>=2.41.0,<3",
    "loguru==0.7.*",
    "python-multipart==0.0.*",
    "aiogram==3.28.*",
    "dateparser==1.4.*",
    "google-auth==2.53.*",
    "google-auth-oauthlib==1.4.*",
    "google-api-python-client==2.197.*",
    "yt-dlp",
]

[dependency-groups]
dev = [
    "ruff==0.15.*",
    "pytest==9.0.*",
    "pytest-asyncio==1.4.*",
    "aiosqlite==0.22.*",
]

[tool.ruff]
target-version = "py314"
line-length = 88

[tool.ruff.lint]
select = [
  "E", "F", "I", "N", "UP", "B", "SIM", "RUF",
  "ANN", "C4", "PT", "T20", "S", "ARG",
]
ignore = []

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["ANN201", "ANN401", "S101", "S105", "S107", "ARG001", "ARG002"]
"app/db/migrations/**/*.py" = ["E501", "ANN"]
"app/db/seed/**/*.py" = ["E501"]
"app/services/amp_page.py" = ["E501"]
"app/settings.py" = ["ANN401"]
"app/services/github.py" = ["S105"]
"app/workers/**/*.py" = ["ARG001", "RUF012"]
"app/todobot/middlewares/**/*.py" = ["ANN401"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "postgres: integration tests requiring POSTGRES_TEST_URL",
]
