[project]
name = "glorng-server"
version = "0.1.0"
requires-python = ">=3.14,<3.15"
dependencies = [
    "fastapi[standard]==0.136.*",
    "uvicorn[standard]==0.49.*",
    "sqlalchemy[asyncio]==2.0.*",
    "asyncpg==0.31.*",
    "alembic==1.18.*",
    "pydantic-settings==2.14.*",
    "PyJWT[crypto]==2.13.*",
    "bcrypt==5.0.*",
    "redis[hiredis]==8.0.*",
    "celery==5.6.*",
    "kombu==5.6.*",
    "sentry-sdk[fastapi]==2.63.*",
    "httpx==0.28.*",
    "openai>=2.41.0,<3",
    "loguru==0.7.*",
    "python-multipart==0.0.*",
    "aiogram==3.28.*",
    "dateparser==1.4.*",
    "google-auth==2.53.*",
    "google-auth-oauthlib==1.4.*",
    "google-api-python-client==2.197.*",
    "yt-dlp>=2026.3.17",
    "elasticsearch[async]==9.4.*",
    "motor==3.7.*",
    "weasyprint==68.*",
]

[dependency-groups]
dev = [
    "ruff==0.15.*",
    "pytest==9.0.*",
    "pytest-asyncio==1.4.*",
    "aiosqlite==0.22.*",
    "mongomock-motor==0.0.*",
]

[tool.ruff]
target-version = "py314"
line-length = 88

[tool.ruff.lint]
select = [
  "E", "F", "I", "N", "UP", "B", "SIM", "RUF",
  "ANN", "C4", "PT", "T20", "S", "ARG",
]
ignore = []

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
  "ANN001", "ANN201", "ANN202", "ANN401", "S101", "S105", "S106", "S107",
  "ARG001", "ARG002", "E501", "N806", "SIM101",
]
"app/db/migrations/**/*.py" = ["E402", "E501", "ANN"]
"app/routers/**/*.py" = ["B008"]
"app/core/password_policy.py" = ["S105"]
"app/db/seed/**/*.py" = ["E501"]
"app/services/amp_page.py" = ["E501"]
"app/settings.py" = ["ANN401"]
"app/db/init_service.py" = ["S607"]
"app/db/documents/base.py" = ["ANN401"]
"app/db/repositories/**/*.py" = ["ANN401", "E501", "UP047"]
"app/db/seed_multicooker_recipes.py" = ["E501"]
"app/services/**/*.py" = ["ANN202", "E501"]
"app/todobot/main.py" = ["ANN001"]
"scripts/**/*.py" = ["ANN401", "ANN001"]
"app/services/github.py" = ["S105"]
"app/workers/**/*.py" = ["ARG001", "RUF012"]
"app/todobot/middlewares/**/*.py" = ["ANN401"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.uv]
override-dependencies = ["aiohttp>=3.14.0"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "postgres: integration tests requiring POSTGRES_TEST_URL",
    "redis: integration tests requiring a real Redis instance at REDIS_URL",
    "integration: slow multi-service tests excluded from the P0 PR gate",
    "e2e_api: full HTTP pipeline tests including middleware",
]
